Fixed a namespacing bug in Virtual agent
-  Contacts page fixed

--- a/public/src/application.scss
+++ b/public/src/application.scss
@@ -3264,14 +3264,6 @@ a.page_title{
 	@include corners(6px, 6px, 0px, 0px);
 }
 
-.contact-box{
-	padding-left:170px;
-	.profile_pic{
-		float:left;
-		margin-left:-150px;
-	}
-}
-
 .contact-box-additional{
 	padding-left:150px;
 }
